@@ -13,8 +13,8 @@ CFLAGS = @CFLAGS@ -I$(top_builddir)/include -I$(top_builddir)/sys -I..
 
 install-data-local: makecode
 	./makecode; \
-	mkdir -p $(DESTDIR)@CONFIG_DIR@/nls; \
-	$(INSTALL_DATA) maccode.* $(DESTDIR)@CONFIG_DIR@/nls/
+	mkdir -p $(DESTDIR)$(sysconfdir)/nls; \
+	$(INSTALL_DATA) maccode.* $(DESTDIR)$(sysconfdir)/nls/
 
 #
 # cleanup
