@@ -7,4 +7,4 @@ atalkd_LDADD = $(top_builddir)/libatalk/libatalk.la
 
 noinst_HEADERS = atserv.h gate.h interface.h list.h multicast.h nbp.h rtmp.h zip.h
 
-CFLAGS = @CFLAGS@ -D_PATH_ATALKDCONF=\"$(CONFIG_DIR)/atalkd.conf\"
+CFLAGS = @CFLAGS@ -D_PATH_ATALKDCONF=\"$(sysconfdir)/atalkd.conf\"
